Updated animated background gradient

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         }
       }
       body {
-        background: linear-gradient(-50deg,  #d3eeff, #ffd6e8, #afeeee, #ffe4e1);
+        background: linear-gradient( 50deg, #ffe3e3, #e6e6fa, #fffacd, #d9e7ff);
         background-size: 400% 400%;
         animation: gradientBG 6s ease infinite;
       }
