Add maintenance page with QR images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="min-h-screen flex flex-col items-center justify-center text-center p-6">
       <!-- Animated Maintenance Icon -->
       <div class="animate__animated animate__rotateIn mb-6 text-purple-600">
-        <i class="fas fa-tools text-7xl sm:text-8xl animate-spin-slow"></i>
+        <i class="fas fa-tools text-7xl sm:text-8xl "></i>
       </div>
 
       <!-- Main Text Content -->
@@ -63,19 +63,7 @@
     </div>
 
     <style>
-      .animate-spin-slow {
-        animation: spin 4s linear infinite;
-      }
-
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-
-        100% {
-          transform: rotate(360deg);
-        }
-      }
+      
       body {
         background: linear-gradient( 50deg, #ffe3e3, #e6e6fa, #fffacd, #d9e7ff);
         background-size: 400% 400%;
